# sys-scan-graph

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_GENERATION_README.md  MARKETING_ONE_PAGER.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  config.yaml  enriched_report.html  generate_massive_dataset.sh  hf_data-sets.txt  manifest.json  profile_baseline_llm_memory.py  profile_full_pipeline_memory.py  profile_pipeline.py  profile_test_pipeline_memory.py  pytest.ini
.github/workflows/: release-validate.yml  release.yml
agent/: .coverage  LICENSE  MANIFEST.in  README.md  baseline.py  config.py  counterfactual.py  data_governance.py  endpoint_classification.py  evaluation.py  graph_analysis.py  graph_nodes_scaffold.py  ground_truth_schema.json  llm.py  llm_provider.py  llm_provider_enhanced.py  migration_v3.py  pipeline.py  rarity.yaml  rarity_generate.py  redaction.py  reduction.py  report.json  report_diff.py  report_html.py  rule_gap_miner.py  rules.py  setup.py  synthetic_ground_truth_example.json
agent/artifacts/: perf_baseline.json
agent/executors/: hashing.py  pkg.py
agent/legacy/: __init__.py  graph_nodes.py  graph_nodes_enhanced.py  graph_nodes_performance.py  pipeline.py  rules.py
agent/synthetic_data/: README.md  __init__.py  abundance_verifier.py  advanced_verification_agent.py  base_correlation_producer.py  base_producer.py  base_verifier.py  cli.py  coherence_verifier.py  correlation_registry.py  data_transformation_pipeline.py  example.py  filesystem_correlation_producer.py  generate_dataset.py  ioc_producer.py  kernel_correlation_producer.py  kernel_params_producer.py  mac_producer.py  modules_producer.py  network_producer.py  parallel_processor.py  process_network_correlation_producer.py  process_producer.py  producer_registry.py  producer_test_output.json  realism_verifier.py  schema_verifier.py  suid_producer.py  synthetic_data_generator.py  synthetic_data_pipeline.py  verifier_orchestrator.py  world_writable_producer.py
agent/synthetic_data/intermediate_results/: correlations.json  raw_findings.json  verification_report.json
agent/sys_scan_graph_agent/: __init__.py  baseline.py  cli.py  db_pool.py  evaluation.py  graph.py  graph_analysis.py  graph_nodes_enhanced.py  graph_nodes_scaffold.py  llm.py  llm_provider.py  llm_provider_enhanced.py  pipeline.py  redaction.py  report_html.py  rule_gap_miner.py
agent/tests/: test_advanced_router.py  test_fleet_report_schema.py
artifacts/: perf_baseline.json
debian/: changelog  control  copyright  debhelper-build-stamp  files  manpages  postinst  postrm  rules  sys-scan-graph.1  sys-scan-graph.substvars  watch
debian/.debhelper/sys-scan-graph/: dbgsym-build-ids
debian/.debhelper/sys-scan-graph/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/sys-scan-graph/dbgsym-root/usr/share/doc/: sys-scan-graph-dbgsym
debian/sys-scan-graph/DEBIAN/: control  md5sums  postinst  postrm
debian/sys-scan-graph/usr/include/sys-scan/core/: RuleEngine.h  RuleEngineInitializer.h
debian/sys-scan-graph/usr/include/sys-scan/scanners/: EbpfScanner.h
debian/sys-scan-graph/usr/share/doc/sys-scan-graph/: SECURITY.md
docs/: Release-Notes-Template.md  TEST_COVERAGE.md
docs/LEGAL/: BSL-FAQ.md
docs/wiki/: CI-and-SARIF-Integration.md  Installation.md  License-Overview.md  _index.md
src/core/: Config.h  JSONWriter.cpp
src/scanners/: AuditdScanner.cpp  ContainerScanner.cpp  IOCScanner.cpp  KernelHardeningScanner.cpp  ModuleScanner.cpp  MountScanner.cpp  MountScanner.h  NetworkScanner.cpp  ProcessScanner.cpp  SuidScanner.cpp  SystemdUnitScanner.cpp  WorldWritableScanner.cpp
tests/: test_privilege.cpp
